# color-manager

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  docs.yml
src/: color_manager.rs  device.rs  lib.rs  profile.rs  scope.rs  sensor.rs
