[package]
name = "color-manager"
version = "0.1.0"
edition = "2021"
authors = ["Maximiliano Sandoval"]
description = "org.freedesktop.ColorManager implementation using zbus"
repository = "https://github.com/A6GibKm/color-manager"
keywords = ["color", "colord", "dbus"]
categories = ["os::linux-apis", "os", "api-bindings"]
license = "MIT"

[dependencies]
enumflags2 = "0.7.5"
futures-util = "0.3.25"
serde = {version = "1.0.152", features = ["derive"]}
zbus = "3.7.0"
